<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".PopUpAdharActivity">

<!--sam-->
    <EditText
        android:id="@+id/editTextPUAAName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/name"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextPUAAFatherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/father_name" />

    <EditText
        android:id="@+id/editTextPUAAAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextPUAAMobileNumber"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textSize="15sp"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number" />

    <EditText
        android:id="@+id/editTextPUAAAdharNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textStyle="bold"
        android:inputType="number"
        android:textSize="15sp"
        android:hint="@string/adhar_number" />

    <Button
        android:id="@+id/buttonPUAASave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/save"
        android:background="@drawable/btn_style"/>

</LinearLayout>