<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".ForgotPasswordActivity">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerFPQuestion"
        android:layout_marginBottom="8dp"
        android:entries="@array/questions"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:id="@+id/editTextFPAnswer"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFPCheck"
        android:layout_marginBottom="8dp"
        android:text="@string/check"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:id="@+id/editTextFPNewPass1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/re_enter_new_password"
        android:textSize="16sp"
        android:id="@+id/editTextFPNewPass2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonFPSave"
        android:text="@string/save"/>

</LinearLayout>