<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lordsam.securestore.PopUpPassportActivity">

    <EditText
        android:id="@+id/editTextPUPassportName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPUPassportNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/nationality"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPUPassportAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/address"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPUPassportNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/passport_no"
        android:inputType="text"
        android:textSize="16sp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonPUPassportSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>