<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ResetPasswordActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:id="@+id/editTextRPOldPass"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRPCheck"
        android:layout_marginBottom="8dp"
        android:text="Check"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:id="@+id/editTextRPNewPass1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/re_enter_new_password"
        android:textSize="16sp"
        android:id="@+id/editTextRPNewPass2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRPSave"
        android:text="@string/save"/>

</LinearLayout>