<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_style"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/url_"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewCWURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/url"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/login_id_"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textViewCWLoginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_id"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/password_"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textViewCWPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>