<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_style"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textviewCPassportName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textviewCPassportNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/nationality"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textviewCPassportAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/address"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textviewCPassportNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="Sam Smith"
        android:hint="@string/passport_no"
        android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>