<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/acc_no"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewCCAccountNumber"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/account_number"
                android:textSize="20sp" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/month_"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewCCExpiryMonth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/month" />
            </LinearLayout>


            <TextView
                android:id="@+id/textViewSlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/year_"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewCCExpiryYear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/year"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/holder_"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewCCHolderName"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="Card Holder Name" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/cvv_"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewCCCVV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cvv"
                android:textSize="20sp" />
        </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCCCardType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:gravity="end"
            android:text="@string/card_type" />


    </LinearLayout>
</LinearLayout>