<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_height="wrap_content"
    tools:context=".PopUpEmailPasswordActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPUEPEmail"
        android:hint="@string/e_mail"
        android:layout_marginBottom="4dp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:autofillHints="example@email.com" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPUEPPassword"
        android:layout_marginBottom="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:autofillHints="example@email.com" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPUEPSave"
        android:textSize="16sp"
        android:text="@string/save"
        android:textAllCaps="false"/>

</LinearLayout>